log/build_2026-05-26_19-53-17/altair_core/stdout_stderr.log
running egg_info
creating ../build/altair_core/altair_core.egg-info
writing ../build/altair_core/altair_core.egg-info/PKG-INFO
writing dependency_links to ../build/altair_core/altair_core.egg-info/dependency_links.txt
writing entry points to ../build/altair_core/altair_core.egg-info/entry_points.txt
writing requirements to ../build/altair_core/altair_core.egg-info/requires.txt
writing top-level names to ../build/altair_core/altair_core.egg-info/top_level.txt
writing manifest file '../build/altair_core/altair_core.egg-info/SOURCES.txt'
reading manifest file '../build/altair_core/altair_core.egg-info/SOURCES.txt'
writing manifest file '../build/altair_core/altair_core.egg-info/SOURCES.txt'
running build
running build_py
creating /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build
creating /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib
creating /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/altair_core
copying altair_core/base_behavior.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/altair_core
copying altair_core/behavior_runner.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/altair_core
copying altair_core/module_manager.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/altair_core
copying altair_core/__init__.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/altair_core
creating /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/user_behaviors
copying user_behaviors/example_behavior.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/user_behaviors
copying user_behaviors/template_behavior.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/user_behaviors
copying user_behaviors/__init__.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/user_behaviors
running install
running install_lib
creating /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/altair_core
copying /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/altair_core/base_behavior.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/altair_core
copying /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/altair_core/behavior_runner.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/altair_core
copying /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/altair_core/module_manager.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/altair_core
copying /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/altair_core/__init__.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/altair_core
creating /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/user_behaviors
copying /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/user_behaviors/example_behavior.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/user_behaviors
copying /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/user_behaviors/template_behavior.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/user_behaviors
copying /mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/build/lib/user_behaviors/__init__.py -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/user_behaviors
byte-compiling /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/altair_core/base_behavior.py to base_behavior.cpython-310.pyc
byte-compiling /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/altair_core/behavior_runner.py to behavior_runner.cpython-310.pyc
  File "/mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/altair_core/behavior_runner.py", line 131
    (void)request;
          ^^^^^^^
SyntaxError: invalid syntax

byte-compiling /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/altair_core/module_manager.py to module_manager.cpython-310.pyc
  File "/mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/altair_core/module_manager.py", line 290
    (void)request;
          ^^^^^^^
SyntaxError: invalid syntax

byte-compiling /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/altair_core/__init__.py to __init__.cpython-310.pyc
byte-compiling /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/user_behaviors/example_behavior.py to example_behavior.cpython-310.pyc
byte-compiling /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/user_behaviors/template_behavior.py to template_behavior.cpython-310.pyc
byte-compiling /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/user_behaviors/__init__.py to __init__.cpython-310.pyc
running install_data
creating /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/share/ament_index
creating /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/share/ament_index/resource_index
creating /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/share/ament_index/resource_index/packages
copying resource/altair_core -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/share/ament_index/resource_index/packages
copying package.xml -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/share/altair_core
creating /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/share/altair_core/config
copying config/modules_config.json -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/share/altair_core/config
creating /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/share/altair_core/profiles
copying profiles/arm_test_profile.json -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/share/altair_core/profiles
copying profiles/base_only_profile.json -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/share/altair_core/profiles
copying profiles/default_profile.json -> /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/share/altair_core/profiles
running install_egg_info
Copying ../build/altair_core/altair_core.egg-info to /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/lib/python3.10/site-packages/altair_core-1.0.0-py3.10.egg-info
running install_scripts
Installing behavior_runner script to /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/bin
Installing module_manager script to /mnt/c/Users/106no/Documents/GitHub/altair_framework/install/altair_core/bin
writing list of installed files to '/mnt/c/Users/106no/Documents/GitHub/altair_framework/build/altair_core/install.log'
